// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel/components/BuildingBlocks/RewardDetail.jsx Snapshot tests with react-test-renderer reward detail is rendered with all values present 1`] = `
<div
  className="RewardDetail flex-container flex-dir-column align-justify"
>
  <div
    className="RewardDetail__image_container"
  >
    <div
      className="RewardDetail__picture"
      style={
        Object {
          "backgroundImage": "url('https://www.ghostery.com/wp-content/uploads/2017/12/simple-detailed-1024x833.png')",
        }
      }
    />
  </div>
  <div
    className="RewardDetail__title"
  >
    test reward title
  </div>
  <div
    className="RewardDetail__description"
  >
    test reward description
  </div>
  <div
    className="RewardDetail__code_container flex-container align-middle align-justify"
  >
    <span
      className="RewardDetail__code"
    >
      <span>
        test_code
      </span>
      <input
        readOnly={true}
        type="text"
        value="test_code"
      />
    </span>
    <span
      className="RewardDetail__copy clickable"
      onClick={[Function]}
    >
      rewards_copy_code
    </span>
  </div>
  <div
    className="RewardDetail__details_container flex-container align-justify align-middle"
  >
    <div
      className="RewardDetail__expires"
    >
      rewards_expires_in_days
    </div>
    <div
      className="g-tooltip clickable"
    >
      <span
        className="RewardDetail__terms"
      >
        rewards_terms_conditions
      </span>
    </div>
  </div>
  <div
    className="RewardDetail__redeem_button clickable"
    onClick={[Function]}
  >
    redeem now
  </div>
</div>
`;

exports[`app/panel/components/BuildingBlocks/RewardDetail.jsx Snapshot tests with react-test-renderer reward detail is rendered with missing code 1`] = `
<div
  className="RewardDetail flex-container flex-dir-column align-justify"
>
  <div
    className="RewardDetail__image_container"
  >
    <div
      className="RewardDetail__picture"
      style={
        Object {
          "backgroundImage": "url('https://www.ghostery.com/wp-content/uploads/2017/12/simple-detailed-1024x833.png')",
        }
      }
    />
  </div>
  <div
    className="RewardDetail__title"
  >
    test reward title
  </div>
  <div
    className="RewardDetail__description"
  >
    test reward description
  </div>
  
  <div
    className="RewardDetail__details_container flex-container align-justify align-middle"
  >
    <div
      className="RewardDetail__expires"
    >
      rewards_expires_in_days
    </div>
    <div
      className="g-tooltip clickable"
    >
      <span
        className="RewardDetail__terms"
      >
        rewards_terms_conditions
      </span>
    </div>
  </div>
  <div
    className="RewardDetail__redeem_button clickable"
    onClick={[Function]}
  >
    redeem now
  </div>
</div>
`;

exports[`app/panel/components/BuildingBlocks/RewardDetail.jsx Snapshot tests with react-test-renderer reward detail is rendered with missing conditions 1`] = `
<div
  className="RewardDetail flex-container flex-dir-column align-justify"
>
  <div
    className="RewardDetail__image_container"
  >
    <div
      className="RewardDetail__picture"
      style={
        Object {
          "backgroundImage": "url('https://www.ghostery.com/wp-content/uploads/2017/12/simple-detailed-1024x833.png')",
        }
      }
    />
  </div>
  <div
    className="RewardDetail__title"
  >
    test reward title
  </div>
  <div
    className="RewardDetail__description"
  >
    test reward description
  </div>
  <div
    className="RewardDetail__code_container flex-container align-middle align-justify"
  >
    <span
      className="RewardDetail__code"
    >
      <span>
        test_code
      </span>
      <input
        readOnly={true}
        type="text"
        value="test_code"
      />
    </span>
    <span
      className="RewardDetail__copy clickable"
      onClick={[Function]}
    >
      rewards_copy_code
    </span>
  </div>
  <div
    className="RewardDetail__details_container flex-container align-justify align-middle"
  >
    <div
      className="RewardDetail__expires"
    >
      rewards_expires_in_days
    </div>
    
  </div>
  <div
    className="RewardDetail__redeem_button clickable"
    onClick={[Function]}
  >
    redeem now
  </div>
</div>
`;

exports[`app/panel/components/BuildingBlocks/RewardDetail.jsx Snapshot tests with react-test-renderer reward detail is rendered with missing description 1`] = `
<div
  className="RewardDetail flex-container flex-dir-column align-justify"
>
  <div
    className="RewardDetail__image_container"
  >
    <div
      className="RewardDetail__picture"
      style={
        Object {
          "backgroundImage": "url('https://www.ghostery.com/wp-content/uploads/2017/12/simple-detailed-1024x833.png')",
        }
      }
    />
  </div>
  <div
    className="RewardDetail__title"
  >
    test reward title
  </div>
  
  <div
    className="RewardDetail__code_container flex-container align-middle align-justify"
  >
    <span
      className="RewardDetail__code"
    >
      <span>
        test_code
      </span>
      <input
        readOnly={true}
        type="text"
        value="test_code"
      />
    </span>
    <span
      className="RewardDetail__copy clickable"
      onClick={[Function]}
    >
      rewards_copy_code
    </span>
  </div>
  <div
    className="RewardDetail__details_container flex-container align-justify align-middle"
  >
    <div
      className="RewardDetail__expires"
    >
      rewards_expires_in_days
    </div>
    <div
      className="g-tooltip clickable"
    >
      <span
        className="RewardDetail__terms"
      >
        rewards_terms_conditions
      </span>
    </div>
  </div>
  <div
    className="RewardDetail__redeem_button clickable"
    onClick={[Function]}
  >
    redeem now
  </div>
</div>
`;

exports[`app/panel/components/BuildingBlocks/RewardDetail.jsx Snapshot tests with react-test-renderer reward detail is rendered with missing text 1`] = `
<div
  className="RewardDetail flex-container flex-dir-column align-justify"
>
  <div
    className="RewardDetail__image_container"
  >
    <div
      className="RewardDetail__picture"
      style={
        Object {
          "backgroundImage": "url('https://www.ghostery.com/wp-content/uploads/2017/12/simple-detailed-1024x833.png')",
        }
      }
    />
  </div>
  
  <div
    className="RewardDetail__description"
  >
    test reward description
  </div>
  <div
    className="RewardDetail__code_container flex-container align-middle align-justify"
  >
    <span
      className="RewardDetail__code"
    >
      <span>
        test_code
      </span>
      <input
        readOnly={true}
        type="text"
        value="test_code"
      />
    </span>
    <span
      className="RewardDetail__copy clickable"
      onClick={[Function]}
    >
      rewards_copy_code
    </span>
  </div>
  <div
    className="RewardDetail__details_container flex-container align-justify align-middle"
  >
    <div
      className="RewardDetail__expires"
    >
      rewards_expires_in_days
    </div>
    <div
      className="g-tooltip clickable"
    >
      <span
        className="RewardDetail__terms"
      >
        rewards_terms_conditions
      </span>
    </div>
  </div>
  <div
    className="RewardDetail__redeem_button clickable"
    onClick={[Function]}
  >
    redeem now
  </div>
</div>
`;
